Made webview content to fit screen width.

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -3,12 +3,13 @@
 <!--2020/12/22 Waync Cheng-->
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=300px">
 <style type="text/css">
+body {margin:0;padding:0;}
 h1 {margin:2px;color:#4caf50;}
 canvas {border: green 1px solid;}
-button {margin:1px;width:100%;height:3.5em;}
-table {width:100%;}
+button {width:100%;height:3em;}
+table {width:100%;border:none;}
 td {width:50%;}
 .hide {display:none;}
 .left {float:left;}
