Added plants and more emojis to quizdata.

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -5,8 +5,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=300px">
 <style type="text/css">
-body {margin:0;padding:0;}
-h1 {margin:2px;color:#4caf50;}
+* {padding:0;margin:0;}
+h1 {font-size:1.6em;margin:2px;color:#4caf50;}
 canvas {border: green 1px solid;}
 button {width:100%;height:3em;}
 table {width:100%;border:none;}
@@ -23,8 +23,9 @@ td {width:50%;}
   <div id="title" class="center" style="width:80%">
     <table>
     <tr><td><button>Fruits</button></td><td><button>Animals</button></td></tr>
-    <tr><td><button>Activity</button></td><td><button>Foods</button></td></tr>
-    <tr><td><button>Objects</button></td><td><button>Travel & Places</button></td></tr>
+    <tr><td><button>Plants</button></td><td><button>Activity</button></td></tr>
+    <tr><td><button>Foods</button></td><td><button>Objects</button></td></tr>
+    <tr><td colspan="2"><button>Travel & Places</button></td></tr>
     <tr><td colspan="2"><button>🎲 Random</button></td></tr>
     </table>
   </div>
